# gerbil

./: .gitignore  CLAUDE.md  LICENSE  README.md  agent.py  gerbil  gerbil.py  providers.py  pyproject.toml  sandbox.py  tools.py
scripts/: apply-gerbil.sh
src/gerbil/: __init__.py  __main__.py  agent.py  cli.py  mcp_client.py  ollama.py  providers.py  resume.py  sandbox.py  session.py  term.py  tools.py
src/lean-sandbox/: Dockerfile
tests/: mock_mcp_server.py  smoke_test.py  test_commit.py  test_gemini.py  test_mcp.py  test_mcp_cancel.py  test_ollama.py  test_portkey.py  test_reconstruct.py  test_render.py  test_reset_lean_server.py  test_resume.py  test_retry.py  test_run_code_guard.py
